--- a/app/src/main/res/layout/view_option_single_column.xml
+++ b/app/src/main/res/layout/view_option_single_column.xml
@@ -45,6 +45,8 @@
             android:text="@string/app_name"
             android:textSize="14sp" />
 
+        <include layout="@layout/check_indicator" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
