--- a/app/src/main/res/layout/view_option_small_text_with_icon.xml
+++ b/app/src/main/res/layout/view_option_small_text_with_icon.xml
@@ -31,6 +31,8 @@
             android:layout_marginBottom="16dp"
             android:scaleType="centerCrop" />
 
+        <include layout="@layout/check_indicator" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
