--- a/app/src/main/res/layout/view_option_text_only.xml
+++ b/app/src/main/res/layout/view_option_text_only.xml
@@ -20,6 +20,8 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+        <include layout="@layout/check_indicator" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
