--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -2,24 +2,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vanhackathon.mybesthelper.question.QuestionFragment">
+    android:background="@color/colorTertiary3"
+    tools:context="com.vanhackathon.mybesthelper.quiz.QuestionFragment">
 
-    <TextView
-        android:id="@+id/question_title"
+
+    <FrameLayout
+        android:id="@+id/question_title_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/app_name"
-        android:textSize="18sp" />
+        android:background="@color/colorTertiary4"
+        android:elevation="2dp"
+        android:minHeight="60dp">
+
+        <TextView
+            android:id="@+id/question_title"
+            fontPath="@string/fontPathLatoBlack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textSize="18sp" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/question_title"
+            android:background="@color/colorTertiary2" />
+    </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/options_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/question_title"
+        android:layout_below="@id/question_title_container"
         android:layout_centerHorizontal="true"
         android:clipToPadding="false"
         android:padding="@dimen/option_offeset" />
