--- a/app/src/main/res/layout/view_option_single_column.xml
+++ b/app/src/main/res/layout/view_option_single_column.xml
@@ -20,6 +20,7 @@
 
         <TextView
             android:id="@+id/title"
+            fontPath="@string/fontPathLatoBlack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -32,6 +33,7 @@
             android:textStyle="bold" />
 
         <TextView
+
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
