--- a/app/src/main/res/layout/view_option_small_text_with_icon.xml
+++ b/app/src/main/res/layout/view_option_small_text_with_icon.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            fontPath="@string/fontPathLatoBlack"
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
