page indicator | minor layout adjustments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.viewpagerindicator.UnderlinePageIndicator
+
+        android:id="@+id/pager_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_gravity="bottom" />
+
 </FrameLayout>
