--- a/app/src/main/res/layout/view_option_small_text_with_icon.xml
+++ b/app/src/main/res/layout/view_option_small_text_with_icon.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/card_corners">
 
     <RelativeLayout
@@ -12,8 +12,8 @@
         android:layout_height="match_parent">
 
         <TextView
-            fontPath="@string/fontPathLatoBlack"
             android:id="@+id/title"
+            fontPath="@string/fontPathLatoBlack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
