--- a/app/src/main/res/layout/view_option_text_only.xml
+++ b/app/src/main/res/layout/view_option_text_only.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/card_corners">
 
     <RelativeLayout
