--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,51 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.vanhackathon.mybesthelper.StartActivity">
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_assignment_ind_black_24dp" />
-
-    <TextView
-        android:id="@+id/text1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/logo"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="@string/activity_start_lets_do_this"
-        android:textSize="18sp" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.vanhackathon.mybesthelper.StartActivity">
 
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text1"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/activity_start_select_one"
-        android:textSize="16sp" />
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_assignment_ind_black_24dp" />
 
-    <Button
-        android:id="@+id/button_start"
-        fontPath="@string/fontPathLatoBold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/selector_button_primary_color"
-        android:minHeight="60dp"
-        android:text="@string/activity_start_start_button"
-        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/logo"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/activity_start_lets_do_this"
+            android:textSize="18sp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text1"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/activity_start_select_one"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button_start"
+            fontPath="@string/fontPathLatoBold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/button_start_showcase"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/selector_button_primary_color"
+            android:elevation="2dp"
+            android:minHeight="60dp"
+            android:text="@string/activity_start_start_button"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/button_start_showcase"
+            fontPath="@string/fontPathLatoBold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/selector_button_primary_color"
+            android:elevation="2dp"
+            android:minHeight="60dp"
+            android:text="@string/activity_start_showcase_button"
+            android:textColor="@color/white" />
+
+    </RelativeLayout>
+
+</ScrollView>
