--- a/app/src/main/res/layout/view_option_small_text_with_icon.xml
+++ b/app/src/main/res/layout/view_option_small_text_with_icon.xml
@@ -18,7 +18,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="@string/app_name"
             android:textSize="16sp"
             android:textStyle="bold" />
